fix sidebar overflow

--- a/app/styles/sidebar.css.scss
+++ b/app/styles/sidebar.css.scss
@@ -111,7 +111,7 @@
     color:$lightgray;
     transition:all .15s linear;
     display:inline-block;
-    width:100%;
+    
   }
 
   .experiment-controls {
